# plugincpp

./: .gitignore  CMakeLists.txt
include/: plugin.h
plugins/first/: CMakeLists.txt
plugins/first/src/: main.cpp
plugins/second/: CMakeLists.txt
plugins/second/src/: main.cpp
src/: main.cpp  plugin_handler.hpp
